[gd_scene load_steps=37 format=3 uid="uid://d0khn30b8bndi"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_6gcqw"]
[ext_resource type="Texture2D" uid="uid://mvgn5uk52afy" path="res://Assets/MineAssets/XP_gems/Sprite-Experience_Gem-export.png" id="2_k78y3"]
[ext_resource type="PackedScene" uid="uid://ddisoc41jx0xo" path="res://Scenes/slot.tscn" id="2_wponj"]
[ext_resource type="Texture2D" uid="uid://b7enq1sec1x77" path="res://Assets/MineAssets/UI/UI_panel.png" id="3_8rnlg"]
[ext_resource type="Resource" uid="uid://buno8qayuxhe5" path="res://Resources/Weapons/Magic Wand.tres" id="3_pdwyg"]
[ext_resource type="Texture2D" uid="uid://kjidboofxkw5" path="res://Assets/MineAssets/XP_bar/UnderXP.png" id="4_q1ory"]
[ext_resource type="Texture2D" uid="uid://cmqf6p66uwx6s" path="res://Assets/MineAssets/XP_bar/XPbar.png" id="5_nijg6"]
[ext_resource type="Texture2D" uid="uid://cel3pdcknxx5x" path="res://Assets/MineAssets/XP_bar/OverXP.png" id="6_3w10q"]
[ext_resource type="PackedScene" uid="uid://cutkub3c4c2ef" path="res://Scenes/passive_slot.tscn" id="7_0utof"]
[ext_resource type="FontFile" uid="uid://dnjbhc4e0qia2" path="res://Fonts/EXEPixelPerfect.ttf" id="7_nokbl"]
[ext_resource type="Resource" uid="uid://dsoiyj1lc7wkl" path="res://Resources/Passive Items/Magnet.tres" id="8_60ppg"]
[ext_resource type="Script" path="res://Scenes/options.gd" id="8_io7uf"]
[ext_resource type="Texture2D" uid="uid://bmas0aw332cq8" path="res://Assets/Assets Tutor/Chest/Fantasy RPG (Toony) 32x32.png" id="13_xdutg"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_solwm"]
size = Vector2(20, 20)

[sub_resource type="Gradient" id="Gradient_wggd5"]
offsets = PackedFloat32Array(0.0070922, 0.521277, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.389286, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_kf8t0"]
gradient = SubResource("Gradient_wggd5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gtm1v"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(320, 1, 1)
angle_min = -180.0
angle_max = 180.0
gravity = Vector3(0, 98, 0)
scale_min = 0.5
color_ramp = SubResource("GradientTexture1D_kf8t0")

[sub_resource type="AtlasTexture" id="AtlasTexture_g5t8p"]
atlas = ExtResource("13_xdutg")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m825h"]
atlas = ExtResource("13_xdutg")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20xpb"]
atlas = ExtResource("13_xdutg")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkas5"]
atlas = ExtResource("13_xdutg")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u3bc"]
atlas = ExtResource("13_xdutg")
region = Rect2(288, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v080j"]
atlas = ExtResource("13_xdutg")
region = Rect2(320, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31t2a"]
atlas = ExtResource("13_xdutg")
region = Rect2(352, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gn5u"]
atlas = ExtResource("13_xdutg")
region = Rect2(288, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs520"]
atlas = ExtResource("13_xdutg")
region = Rect2(320, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_10y42"]
atlas = ExtResource("13_xdutg")
region = Rect2(352, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4drt"]
atlas = ExtResource("13_xdutg")
region = Rect2(288, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3evp"]
atlas = ExtResource("13_xdutg")
region = Rect2(320, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqteb"]
atlas = ExtResource("13_xdutg")
region = Rect2(352, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_oblt1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5t8p")
}],
"loop": true,
"name": &"Idle_boss_chest",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m825h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20xpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkas5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u3bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v080j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31t2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gn5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs520")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10y42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4drt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3evp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqteb")
}],
"loop": true,
"name": &"open_boss_chest",
"speed": 24.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_buj2x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j32mc"]
bg_color = Color(0.721569, 0.435294, 0.313726, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.454902, 0.247059, 0.223529, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.335)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jwgas"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5qj3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yljup"]
radius = 50.0

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_6gcqw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_solwm")

[node name="UI" type="CanvasLayer" parent="Sprite2D"]

[node name="Particle" type="GPUParticles2D" parent="Sprite2D/UI"]
process_mode = 3
visible = false
position = Vector2(320, 0)
amount = 100
process_material = SubResource("ParticleProcessMaterial_gtm1v")
texture = ExtResource("2_k78y3")
lifetime = 1.5

[node name="Panel" type="NinePatchRect" parent="Sprite2D/UI"]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -89.0
offset_right = 209.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8rnlg")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 5

[node name="Label" type="Label" parent="Sprite2D/UI/Panel"]
layout_mode = 0
offset_left = 161.0
offset_top = 7.0
offset_right = 255.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("7_nokbl")
theme_override_font_sizes/font_size = 32
text = "LEVEL UP"

[node name="Weapons" type="HBoxContainer" parent="Sprite2D/UI"]
offset_top = 17.0
offset_right = 128.0
offset_bottom = 57.0

[node name="Slot" parent="Sprite2D/UI/Weapons" instance=ExtResource("2_wponj")]
layout_mode = 2
item = ExtResource("3_pdwyg")

[node name="Slot2" parent="Sprite2D/UI/Weapons" instance=ExtResource("2_wponj")]
layout_mode = 2

[node name="Slot3" parent="Sprite2D/UI/Weapons" instance=ExtResource("2_wponj")]
layout_mode = 2

[node name="PassiveItems" type="HBoxContainer" parent="Sprite2D/UI"]
offset_top = 60.0
offset_right = 128.0
offset_bottom = 100.0

[node name="PassiveSlot" parent="Sprite2D/UI/PassiveItems" instance=ExtResource("7_0utof")]
layout_mode = 2
item = ExtResource("8_60ppg")

[node name="PassiveSlot2" parent="Sprite2D/UI/PassiveItems" instance=ExtResource("7_0utof")]
layout_mode = 2

[node name="PassiveSlot3" parent="Sprite2D/UI/PassiveItems" instance=ExtResource("7_0utof")]
layout_mode = 2

[node name="XP" type="TextureProgressBar" parent="Sprite2D/UI"]
unique_name_in_owner = true
offset_right = 640.0
offset_bottom = 40.0
texture_under = ExtResource("4_q1ory")
texture_over = ExtResource("5_nijg6")
texture_progress = ExtResource("6_3w10q")

[node name="Level" type="Label" parent="Sprite2D/UI/XP"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 131.0
offset_top = 10.0
offset_right = 185.0
offset_bottom = 36.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_nokbl")
theme_override_font_sizes/font_size = 32
text = "Lvl 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="VBoxContainer" parent="Sprite2D/UI" node_paths=PackedStringArray("weapons", "passive_items", "particles", "panel")]
unique_name_in_owner = true
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_io7uf")
weapons = NodePath("../Weapons")
passive_items = NodePath("../PassiveItems")
particles = NodePath("../Particle")
panel = NodePath("../Panel")

[node name="Chest" type="NinePatchRect" parent="Sprite2D/UI"]
custom_minimum_size = Vector2(300, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8rnlg")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprite2D/UI/Chest"]
position = Vector2(150, 100)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_oblt1")
animation = &"open_boss_chest"
autoplay = "Idle_boss_chest"

[node name="Open" type="Button" parent="Sprite2D/UI/Chest"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -52.0
offset_right = 25.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_buj2x")
theme_override_styles/normal = SubResource("StyleBoxFlat_j32mc")
text = "Open"

[node name="Close" type="Button" parent="Sprite2D/UI/Chest"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -52.0
offset_right = 25.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_buj2x")
theme_override_styles/normal = SubResource("StyleBoxFlat_j32mc")
text = "Close
"

[node name="Rewards" type="Control" parent="Sprite2D/UI/Chest"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Sprite2D/UI/Chest/Rewards"]
layout_mode = 0
offset_left = 38.0
offset_top = 117.0
offset_right = 78.0
offset_bottom = 157.0

[node name="TextureRect2" type="TextureRect" parent="Sprite2D/UI/Chest/Rewards"]
layout_mode = 0
offset_left = 57.0
offset_top = 43.0
offset_right = 97.0
offset_bottom = 83.0

[node name="TextureRect3" type="TextureRect" parent="Sprite2D/UI/Chest/Rewards"]
layout_mode = 0
offset_left = 131.0
offset_top = 14.0
offset_right = 171.0
offset_bottom = 54.0

[node name="TextureRect4" type="TextureRect" parent="Sprite2D/UI/Chest/Rewards"]
layout_mode = 0
offset_left = 212.0
offset_top = 45.0
offset_right = 252.0
offset_bottom = 85.0

[node name="TextureRect5" type="TextureRect" parent="Sprite2D/UI/Chest/Rewards"]
layout_mode = 0
offset_left = 226.0
offset_top = 114.0
offset_right = 266.0
offset_bottom = 154.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jwgas")

[node name="SelfDamage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="SelfDamage"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_j5qj3")

[node name="Health" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -20.0
offset_top = -21.0
offset_right = 20.0
offset_bottom = -13.0
value = 100.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
rotation_smoothing_speed = 3.0

[node name="Dash_time" type="Timer" parent="."]
wait_time = 0.15

[node name="Dash_again_time" type="Timer" parent="."]

[node name="Magnet" type="Area2D" parent="."]
collision_mask = 4

[node name="Magnet" type="CollisionShape2D" parent="Magnet"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_yljup")

[connection signal="body_entered" from="SelfDamage" to="." method="_on_self_damage_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Dash_time" to="." method="_on_dash_time_timeout"]
[connection signal="timeout" from="Dash_again_time" to="." method="_on_dash_again_time_timeout"]
[connection signal="timeout" from="Dash_again_time" to="." method="_on_dash_time_timeout"]
[connection signal="area_entered" from="Magnet" to="." method="_on_magnet_area_entered"]
